--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,4 @@
 public net.minecraft.world.entity.LivingEntity m_7909_(F)V
 public net.minecraft.world.entity.LivingEntity m_6728_(Lnet/minecraft/world/entity/LivingEntity;)V
+public net.minecraft.world.item.ItemCooldowns$CooldownInstance
+public net.minecraft.world.item.ItemCooldowns$CooldownInstance <init>(II)V
