--- a/gradle.properties
+++ b/gradle.properties
@@ -57,3 +57,5 @@ mod_group_id=com.min01.minsenchantments
 mod_authors=min01
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
 mod_description=add various unique enchantments with tables!
+
+mod_file_name=Mins Enchantments
