--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ base {
 }
 
 mixin {
-    add sourceSets.main, "minsenchantments.mixin-refmap.json"
+    add sourceSets.main, "minsenchantments.refmap.json"
 
     config "minsenchantments.mixin.json"
 }
@@ -160,7 +160,7 @@ dependencies {
     // then special handling is done to allow a setup of a vanilla dependency without the use of an external repository.
   	minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
     annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
-    implementation fg.deobf("curse.maven:tickrate-api-969702:6756069")
+    implementation fg.deobf("curse.maven:tickrate-api-969702:7105256")
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
